--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@capacitor/app": "1.0.6",
     "@capacitor/core": "3.3.2",
+    "@capacitor/geolocation": "^1.2.0",
     "@capacitor/haptics": "1.1.3",
+    "@capacitor/ios": "^3.3.2",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/react": "^5.5.0",
